[tool.poetry]
name = "tic-tac-toe"
version = "1.3.1"
description = ""
authors = ["Nyaaa <1457047+Nyaaa@users.noreply.github.com>"]
readme = "README.md"
packages = [{include = "tic_tac_toe"}]

[tool.poetry.dependencies]
python = "^3.10"

[tool.poetry.group.bot.dependencies]
python-dotenv = "^0.21.0"
keyboa = "^3.1.0"
pytelegrambotapi = "^4.7.1"

[tool.poetry.group.CLI.dependencies]
termcolor = "2.0.1"
tabulate = "^0.9.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
